--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,91 @@
-.content {
-	background: 'url("https://images.pexels.com/photos/7506661/pexels-photo-7506661.jpeg")';
+html {
+	font-size: 62.5%;
+	margin: 0;
+	padding: 0;
+	outline: 0;
+	box-sizing: border-box;
+
+	font-family: sans-serif;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
+
+body {
+	display: grid;
+	place-content: center;
+	font-size: 1.6rem;
+	width: calc(100% - 2rem);
+	outline: 1px solid brown;
+}
+
+.navbar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0px 2rem;
+	width: 90vw;
+	outline: 1px solid navy;
+}
+
+.navbar > * {
+	text-decoration: none;
+	color: inherit;
+}
+
+.links-ul {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0px 2rem;
+	gap: 2rem;
+	outline: 1px solid lawngreen;
+}
+
+li {
+	list-style: none;
+}
+
+li * {
+	text-decoration: none;
+	color: inherit;
+}
+
+/* .product-details {
+	outline: 1px solid palevioletred;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-areas: 'image details';
+	gap: 2rem;
+	padding: 2rem;
+}
+
+.product-details img {
+	grid-area: image;
+}
+
+.details {
+	outline: 1px solid hotpink;
+} */
+
+@media only screen and(max-width: 768px) {
+	.product-details {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		outline: 1px solid palegreen;
+	}
+}
+
+@media only screen and(min-width: 768px) {
+	.product-details {
+		outline: 1px solid green;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
