--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html {
 	outline: 0;
 	box-sizing: border-box;
 
-	font-family: sans-serif;
+	font-family: serif;
 }
 
 *,
@@ -60,6 +60,24 @@ li * {
 }
 .themeIcon:hover {
 	cursor: pointer;
+}
+
+.homepage-photo {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.homepage-photo h4 {
+	font-size: 2.5rem;
+}
+
+.homepage-photo a {
+	text-decoration: underline;
+	color: inherit;
+	font-size: 2rem;
+	font-style: oblique;
 }
 
 .product-image {
