--- a/src/App.css
+++ b/src/App.css
@@ -32,9 +32,14 @@ body {
 	outline: 1px solid navy;
 }
 
+.navbar h1 {
+	font-size: 5rem;
+}
+
 .navbar > * {
 	text-decoration: none;
 	color: inherit;
+	font-size: x-large;
 }
 
 .links-ul {
@@ -43,6 +48,7 @@ body {
 	align-items: center;
 	padding: 0px 2rem;
 	gap: 2rem;
+	width: 50vw;
 	outline: 1px solid lawngreen;
 }
 
@@ -53,6 +59,10 @@ li {
 li * {
 	text-decoration: none;
 	color: inherit;
+}
+
+li svg {
+	transform: scale(1.382);
 }
 
 .themeIcon {
@@ -78,6 +88,29 @@ li * {
 	color: inherit;
 	font-size: 2rem;
 	font-style: oblique;
+}
+
+.about-page {
+	outline: 1px solid olive;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.about-page h2 {
+	font-size: 5rem;
+}
+
+.about-page p {
+	font-size: 3rem;
+}
+
+.about-img {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .product-image {
@@ -142,3 +175,22 @@ li * {
 		height: 960px;
 	}
 } */
+
+.footer-section {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	width: 20rem;
+	height: 35rem;
+	outline: 1px solid darkgoldenrod;
+}
+
+.footer-section a {
+	text-decoration: none;
+	color: inherit;
+}
+
+svg:hover {
+	cursor: pointer;
+}
