--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,9 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding-left: 5rem;
 	width: 90vw;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .navbar h1 {
