--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,8 @@ li svg {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .homepage-photo h4 {
