--- a/src/App.css
+++ b/src/App.css
@@ -281,6 +281,8 @@ svg:hover {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .checkout h3 {
